--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "T9 prediction app",
   "main": "index.js",
   "scripts": {
+    "start": "node server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
   },
